# Cpp-Spotify-API

./: .gitignore  CMakeLists.txt  curl-util.cpp  curl-util.hpp  spotify-api.cpp  spotify-api.hpp  vcpkg.json
categories/: albums.cpp  albums.hpp  artists.cpp  artists.hpp  common.cpp  common.hpp  episodes.cpp  episodes.hpp  player.cpp  player.hpp  playlist.cpp  playlist.hpp  session.cpp  session.hpp  shows.cpp  shows.hpp  tracks.cpp  tracks.hpp
include/: curl-util.hpp  spotify-api.hpp
include/categories/: albums.hpp  artists.hpp  common.hpp  common.tpp  episodes.hpp  player.hpp  playlist.hpp  search.hpp  session.hpp  shows.hpp  tracks.hpp
include/endpoints/: albums.hpp  artists.hpp  common.hpp  episodes.hpp  player.hpp  playlist.hpp  search.hpp  session.hpp  shows.hpp  tracks.hpp
src/: CMakeLists.txt  curl-util.cpp  spotify-api.cpp
src/categories/: albums.cpp  artists.cpp  common.cpp  episodes.cpp  player.cpp  playlist.cpp  search.cpp  session.cpp  shows.cpp  tracks.cpp
src/endpoints/: search.cpp  tracks.cpp
